--- a/Web/src/app/components/advisor/top-experts/top-experts.component.html
+++ b/Web/src/app/components/advisor/top-experts/top-experts.component.html
@@ -34,4 +34,4 @@
     </div>
   </div>
 </div>
-<trending-assets class="inverted" *ngIf="!resultsLimit"></trending-assets>
+<trending-assets class="global-container-min inverted" *ngIf="!resultsLimit"></trending-assets>
