--- a/Web/src/app/components/header/header.component.html
+++ b/Web/src/app/components/header/header.component.html
@@ -2,23 +2,23 @@
     <img src="./assets/logo.png" routerLink="" class="landing-logo" />
     <span class="spacer"></span>
     <div class="menu" fxLayout="row" fxLayoutAlign="space-around center">
-        <a fxShow="true" fxHide.lt-md="true" *ngIf="!loginData || !loginData.isAdvisor" (click)="onBecomeExpert()" routerLinkActive="active"><span>BECOME AN EXPERT</span></a>
-        <div fxShow="true" fxHide.lt-md="true" *ngIf="!loginData || !loginData.isAdvisor" class="separator"></div>
-        <a fxShow="true" fxHide.lt-sm="true" routerLink="/top-experts" routerLinkActive="active"><span>TOP EXPERTS</span></a>
-        <div fxShow="true" fxHide.lt-sm="true" class="separator"></div>
-        <a fxShow="true" fxHide.lt-sm="true" routerLink="/top-assets" routerLinkActive="active"><span>TOP ASSETS</span></a>
-        <div fxShow="true" fxHide.lt-md="true" class="separator"></div>
-        <a fxShow="true" fxHide.lt-md="true" routerLinkActive="active" href="https://auctus.org/" target="_blank"><span>ABOUT US</span></a>
+        <a fxShow="true" fxHide.lt-lg="true" *ngIf="!loginData || !loginData.isAdvisor" (click)="onBecomeExpert()" routerLinkActive="active"><span>BECOME AN EXPERT</span></a>
+        <div fxShow="true" fxHide.lt-lg="true" *ngIf="!loginData || !loginData.isAdvisor" class="separator"></div>
+        <a fxShow="true" fxHide.lt-lg="true" routerLink="/top-experts" routerLinkActive="active"><span>TOP EXPERTS</span></a>
+        <div fxShow="true" fxHide.lt-lg="true" class="separator"></div>
+        <a fxShow="true" fxHide.lt-lg="true" routerLink="/top-assets" routerLinkActive="active"><span>TOP ASSETS</span></a>
+        <div fxShow="true" fxHide.lt-lg="true" class="separator"></div>
+        <a fxShow="true" fxHide.lt-lg="true" routerLinkActive="active" href="https://auctus.org/" target="_blank"><span>ABOUT US</span></a>
         <global-search fxShow="true" fxHide.lt-md="true" class="search"></global-search>
         <span class="login" *ngIf="!isLogged()" (click)="login()">LOGIN</span>
         <span class="signin" *ngIf="!isLogged()" (click)="register()">SIGN UP</span>
-        <a *ngIf="isLogged()" fxShow="true" fxHide.xs="true" (click)="menuOpen = !menuOpen" [matMenuTriggerFor]="profile">
+        <a *ngIf="isLogged()" fxShow="true" fxHide.lt-md="true" (click)="menuOpen = !menuOpen" [matMenuTriggerFor]="profile">
             <span fxLayout="row" fxLayoutAlign="space-around center">
                 <span>PROFILE</span>
                 <mat-icon>{{menuOpen ? 'arrow_drop_up' : 'arrow_drop_down'}}</mat-icon>
             </span>
         </a>
-        <span class="mobile-menu" fxShow="true" fxHide.gt-xs="true" (click)="menuOpen = !menuOpen" [matMenuTriggerFor]="mobile"><mat-icon>{{menuOpen ? 'close' : 'reorder'}}</mat-icon></span>
+        <span class="mobile-menu" fxShow="true" fxHide.gt-md="true" (click)="menuOpen = !menuOpen" [matMenuTriggerFor]="mobile"><mat-icon>{{menuOpen ? 'close' : 'reorder'}}</mat-icon></span>
         <mat-menu class="sub-menu" [overlapTrigger]="false" xPosition="before" #profile="matMenu">
             <button class="sub-menu-item" fxShow="true" fxHide.gt-sm="true" *ngIf="!loginData || !loginData.isAdvisor" (click)="onBecomeExpert()" mat-menu-item>BECOME AN EXPERT</button>
             <button class="sub-menu-item" *ngIf="!!loginData && loginData.isAdvisor" (click)="advisorDetails()" mat-menu-item>MY DETAILS</button>
@@ -32,7 +32,9 @@
             <button class="sub-menu-item" *ngIf="!loginData || !loginData.isAdvisor" (click)="onBecomeExpert()" mat-menu-item>BECOME AN EXPERT</button>
             <button class="sub-menu-item" (click)="onTopExperts()" mat-menu-item>TOP EXPERTS</button>
             <button class="sub-menu-item" (click)="onTopAssets()" mat-menu-item>TOP ASSETS</button>
-            <button class="sub-menu-item" *ngIf="!isLogged()" mat-menu-item><a class="about-mobile" routerLinkActive="active" href="https://auctus.org/" target="_blank"><span>ABOUT US</span></a></button>
+            <button class="sub-menu-item" *ngIf="!isLogged()" mat-menu-item>
+                <a class="about-mobile" routerLinkActive="active" href="https://auctus.org/" target="_blank">ABOUT US</a>
+            </button>
             <button class="sub-menu-item" *ngIf="!!loginData && loginData.isAdvisor" (click)="advisorDetails()" mat-menu-item>MY DETAILS</button>
             <button class="sub-menu-item" *ngIf="!!loginData && loginData.isAdvisor" (click)="editAdvisor()" mat-menu-item>EDIT PROFILE</button>
             <button class="sub-menu-item" *ngIf="isLogged()" (click)="configuration()" mat-menu-item>CONFIGURATION</button>
