--- a/Web/src/app/app.component.html
+++ b/Web/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header class="global-container-min"></header>
+<header></header>
 <ng-http-loader 
     [entryComponent]="topLoading">
 </ng-http-loader>
