--- a/Web/src/app/components/admin/dashboard/dashboard.component.css
+++ b/Web/src/app/components/admin/dashboard/dashboard.component.css
@@ -70,3 +70,11 @@ td {
 tr:nth-child(even) { 
     background-color: #f2f2f2;
 }
+
+::ng-deep body {
+    background-color: white;
+}
+
+th > i {
+    float: left;
+}
