--- a/Web/src/app/components/util/global-search/global-search.component.css
+++ b/Web/src/app/components/util/global-search/global-search.component.css
@@ -88,7 +88,17 @@ input::placeholder {
     vertical-align: middle;
 }
 
-::ng-deep .search-autocomplete-option-div-img img {
+::ng-deep .search-autocomplete-option-div-img-wrapper {
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+    background-color: white;
+    width: 17px;
+    height: 17px;
+    line-height: normal;
+}
+
+::ng-deep .search-autocomplete-option-div-img-wrapper img {
     border-radius:50%;
     -moz-border-radius:50%;
     -webkit-border-radius:50%;
