Success rate shadow

--- a/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
+++ b/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
@@ -29,6 +29,9 @@
       <div class="expert-rates">
         <div class="success-rate-column">
           <svg viewBox="0 0 36 36" class="circular-chart black">
+            <path class="circle" d="M18 2.0845
+              a 15.9155 15.9155 0 0 1 0 31.831
+              a 15.9155 15.9155 0 0 1 0 -31.831" stroke-dasharray="100, 100" style="stroke: #b1b1b1;"></path>
             <path class="circle"
             [attr.stroke-dasharray]="advisor.successRate * 100 +', 100'"
               d="M18 2.0845
