--- a/Web/src/app/components/advisor/expert-details/expert-details.component.html
+++ b/Web/src/app/components/advisor/expert-details/expert-details.component.html
@@ -105,6 +105,9 @@
               <div class="rates" fxLayout="row" fxLayoutAlign="space-around center">
                 <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="20px">
                   <svg viewBox="0 0 36 36" class="circular-chart blue" fxFlex="80px">
+                    <path class="circle" d="M18 2.0845
+                      a 15.9155 15.9155 0 0 1 0 31.831
+                      a 15.9155 15.9155 0 0 1 0 -31.831" stroke-dasharray="100, 100" style="stroke: #383838;"></path>
                     <path class="circle"
                     [attr.stroke-dasharray]="asset.element.assetAdvisor[0].successRate * 100 +', 100'"
                       d="M18 2.0845
