--- a/Web/src/app/components/asset/asset-details/asset-details.component.html
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.html
@@ -11,12 +11,14 @@
       </div>
       <div fxLayout="column" fxLayoutGap="60px">
         <div fxLayout="row" fxLayoutGap="36px" fxLayoutAlign="space-between center">
-          <div class="asset-icon">
-            <img [src]="getAssetImgUrl()" onerror="this.style.display='none'">
-          </div>
-          <div fxLayout="column">
-            <div class="symbol">{{asset.code}}</div>
-            <div class="asset-name">{{asset.name}}</div>
+          <div fxLayout="row" fxLayoutGap="10px">
+            <div class="asset-icon">
+              <img [src]="getAssetImgUrl()" onerror="this.style.display='none'">
+            </div>
+            <div fxLayout="column">
+              <div class="symbol">{{asset.code}}</div>
+              <div class="asset-name">{{asset.name}}</div>
+            </div>
           </div>
           <div fxLayout="column">
             <div class="recommendations">
