Adjustments on page to approve experts

--- a/Web/src/app/components/admin/advisors-requests/advisors-requests.component.html
+++ b/Web/src/app/components/admin/advisors-requests/advisors-requests.component.html
@@ -3,18 +3,43 @@
   <div *ngIf="!requests">Loading...</div>
   <div *ngIf="requests && requests.length == 0">No pending requests.</div>
   <div *ngFor="let request of requests">
-    <label>Id</label>
-    <div>{{request.id}}</div>
-    <label>Name</label>
-    <div>{{request.name}}</div>
-    <label>Description</label>
-    <div>{{request.description}}</div>
-    <label>Previous Experience</label>
-    <div>{{request.previousExperience}}</div>
-    <label>Date</label>
-    <div>{{request.creationDate | date:"medium"}}</div>  
-    <button [promiseBtn]="promise" (click)="approve(request.id)" mat-flat-button color="primary">APPROVE</button>
-    <button [promiseBtn]="promise" (click)="reject(request.id)" mat-flat-button color="warn">REJECT</button>
+    <div class="request" fxLayout="column" fxLayoutAlign="space-around start" fxLayoutGap="30px">
+      <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="30px">
+        <div class="request-div-img">
+          <span class="request-div-img-wrapper">
+            <img onerror="this.style.display='none'" height="130" width="130" [src]="getRequestImage(request.urlGuid)">
+          </span>
+        </div>
+        <div class="request-base-data" fxLayout="column" fxLayoutAlign="space-around start" fxLayoutGap="15px">
+          <div fxLayout="column" fxLayoutAlign="start start">
+            <label>Id</label>
+            <div>{{request.id}}</div>
+          </div>
+          <div fxLayout="column" fxLayoutAlign="start start">
+            <label>Name</label>
+            <div>{{request.name}}</div>
+          </div>
+          <div fxLayout="column" fxLayoutAlign="start start">
+            <label>Date</label>
+            <div>{{request.creationDate | date:"medium"}}</div> 
+          </div> 
+        </div>
+        <div fxLayout="column" fxLayoutAlign="space-around start" fxLayoutGap="15px">
+          <div fxLayout="column" fxLayoutAlign="start start">
+            <label>Description</label>
+            <div>{{request.description}}</div>
+          </div>
+          <div fxLayout="column" fxLayoutAlign="start start">
+            <label>Previous Experience</label>
+            <div>{{request.previousExperience}}</div>
+          </div>
+        </div>
+      </div>
+      <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="15px">
+        <button [promiseBtn]="promise" (click)="approve(request.id)" mat-flat-button color="primary">APPROVE</button>
+        <button [promiseBtn]="promise" (click)="reject(request.id)" mat-flat-button color="warn">REJECT</button>
+      </div>
+    </div>
     <hr>
   </div>
 </div>
