--- a/Web/src/app/components/admin/advisors-requests/advisors-requests.component.css
+++ b/Web/src/app/components/admin/advisors-requests/advisors-requests.component.css
@@ -13,3 +13,35 @@ label{
     font-size: 12px;
 }
 
+.request-div-img {
+    width: 130px;
+    height: 100%;
+    display: inline-flex;
+    padding-bottom: 2px;
+    padding-right: 6px;
+    vertical-align: middle;
+}
+
+.request-div-img-wrapper {
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+    background-color: white;
+    width: 130px;
+    height: 130px;
+    line-height: normal;
+}
+
+.request-div-img-wrapper img {
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+}
+
+.request {
+    padding-top: 30px;
+}
+
+.request-base-data {
+    min-width: 180px;
+}
