--- a/Web/src/app/components/asset/asset-details/asset-details.component.css
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.css
@@ -6,6 +6,7 @@
     font-weight: 300;
     padding-bottom: 54px;
     padding-top: 34px;
+    min-width: 100%;
 }
 
 .symbol{
@@ -28,6 +29,7 @@
 .general-recommendation-box{
     background-color:#2c2c2d;
     padding: 28px;
+    width: 267px;
 }
 
 .assets-table.mat-table{
@@ -63,4 +65,13 @@
 
 .element-row{
     cursor: pointer;
+}
+
+.assets-table .white-button{
+    margin: auto;
+}
+
+.mat-column-expertName{
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
