--- a/Web/src/app/components/asset/asset-details/asset-details.component.html
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.html
@@ -10,35 +10,39 @@
         nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </div>
       <div fxLayout="column" fxLayoutGap="60px">
-        <div fxLayout="row" fxLayoutGap="36px" fxLayoutAlign="space-between center">
-          <div fxLayout="row" fxLayoutGap="10px">
-            <div class="asset-icon">
-              <img [src]="getAssetImgUrl()" onerror="this.style.display='none'">
+        <div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutGap.gt-sm="36px" fxLayoutGap.lt-md="24px" fxLayoutAlign.gt-sm="center center" fxLayoutAlign.lt-md="center center">
+          <div fxLayout="row" fxLayoutGap="36px">
+            <div fxLayout="row" fxLayoutGap="10px">
+              <div class="asset-icon">
+                <img [src]="getAssetImgUrl()" onerror="this.style.display='none'">
+              </div>
+              <div fxLayout="column">
+                <div class="symbol">{{asset.code}}</div>
+                <div class="asset-name">{{asset.name}}</div>
+              </div>
             </div>
             <div fxLayout="column">
-              <div class="symbol">{{asset.code}}</div>
-              <div class="asset-name">{{asset.name}}</div>
+              <div class="recommendations">
+                {{getTotalAdvisorsSentence()}}
+              </div>
+              <div class="followers">
+                {{getFollowersSentence()}}
+              </div>
             </div>
           </div>
-          <div fxLayout="column">
-            <div class="recommendations">
-              {{getTotalAdvisorsSentence()}}
+          <div fxLayout="row" fxLayoutGap="36px">
+            <div fxLayout="column">
+              <percentage-display [value]="asset.variation24h"></percentage-display>
+              Last 24 hours
             </div>
-            <div class="followers">
-              {{getFollowersSentence()}}
+            <div fxLayout="column">
+              <percentage-display [value]="asset.variation7d"></percentage-display>
+              Last 7 days
             </div>
-          </div>
-          <div fxLayout="column">
-            <percentage-display [value]="asset.variation24h"></percentage-display>
-            Last 24 hours
-          </div>
-          <div fxLayout="column">
-            <percentage-display [value]="asset.variation7d"></percentage-display>
-            Last 7 days
-          </div>
-          <div fxLayout="column">
-            <percentage-display [value]="asset.variation30d"></percentage-display>
-            Last 30 days
+            <div fxLayout="column">
+              <percentage-display [value]="asset.variation30d"></percentage-display>
+              Last 30 days
+            </div>
           </div>
           <div class="white-button action-button-sm" [promiseBtn]="promise" *ngIf="asset.following" (click)="onUnfollowAssetClick()">
             Unfollow
@@ -46,19 +50,23 @@
           <div class="blue-button action-button-sm" [promiseBtn]="promise" *ngIf="!asset.following" (click)="onFollowAssetClick()">
             Follow
           </div>
-          <div class="blue-button action-button-sm" *ngIf="showNewAdviceButton" (click)="onNewAdviceClick()">
-            Rate It
-          </div>
         </div>
-        <div fxLayout="row" fxLayoutGap="29px" fxLayoutAlign="space-between start">
-          <div class="general-recommendation-box" fxLayout="column" fxFlex="267px" fxLayoutAlign="center center">
-            <general-recommendation-tag [value]="asset.mode"></general-recommendation-tag>
-            <recommendation-distribution [data]="asset.recommendationDistribution"></recommendation-distribution>
-            <div class="disclaimer">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.
+        <div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutGap="30px" fxLayoutAlign.gt-sm="space-between start" fxLayoutAlign.lt-md="center center">
+          <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="30px">
+            <div class="general-recommendation-box" fxLayout="column" fxLayoutAlign="center center">
+              <general-recommendation-tag [value]="asset.mode"></general-recommendation-tag>
+              <recommendation-distribution [data]="asset.recommendationDistribution"></recommendation-distribution>
+              <div class="disclaimer">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.
+              </div>
+            </div>
+            <div class="blue-button action-button" *ngIf="showNewAdviceButton" (click)="onNewAdviceClick()">
+              Rate It
             </div>
           </div>
-          <asset-history-chart fxFlex [assetValues]="asset.values"></asset-history-chart>
+          <div style="width:100%">
+            <asset-history-chart [assetValues]="asset.values"></asset-history-chart>
+          </div>
         </div>
       </div>
     </div>
@@ -69,12 +77,22 @@
           <th mat-header-cell *matHeaderCellDef> Expert </th>
           <td mat-cell *matCellDef="let assetAdvisor"> 
             <span class="truncate">{{getAdvisor(assetAdvisor.userId).name}}</span>
+            <div fxHide.gt-sm class="expert-rating">
+              <bar-rating [theme]="'fontawesome-o'" [readOnly]="'true'" [rate]="getAdvisor(assetAdvisor.userId).rating" [title]="getAdvisor(assetAdvisor.userId).rating | number: '1.2-2'"></bar-rating>
+            </div>
+            <div fxHide.gt-xs class="white-button action-button-sm" [promiseBtn]="promiseExpert" *ngIf="getAdvisor(assetAdvisor.userId).following" (click)="onUnfollowExpertClick($event, getAdvisor(assetAdvisor.userId))">
+              Unfollow
+            </div>
+            <div fxHide.gt-xs class="blue-button action-button-sm" [promiseBtn]="promiseExpert" *ngIf="!getAdvisor(assetAdvisor.userId).following" (click)="onFollowExpertClick($event, getAdvisor(assetAdvisor.userId))">
+              Follow
+            </div>
+
           </td>
         </ng-container>
       
         <ng-container matColumnDef="rankin">
-          <th mat-header-cell *matHeaderCellDef> Ranking </th>
-          <td mat-cell *matCellDef="let assetAdvisor"> 
+          <th fxHide.lt-md mat-header-cell *matHeaderCellDef> Ranking </th>
+          <td fxHide.lt-md mat-cell *matCellDef="let assetAdvisor"> 
             <div class="expert-rating">
               <bar-rating [theme]="'fontawesome-o'" [readOnly]="'true'" [rate]="getAdvisor(assetAdvisor.userId).rating" [title]="getAdvisor(assetAdvisor.userId).rating | number: '1.2-2'"></bar-rating>
             </div>
@@ -82,16 +100,16 @@
         </ng-container>
 
         <ng-container matColumnDef="value">
-          <th mat-header-cell *matHeaderCellDef> Value </th>
-          <td mat-cell *matCellDef="let assetAdvisor">  
+          <th fxHide.lt-md mat-header-cell *matHeaderCellDef> Value </th>
+          <td fxHide.lt-md mat-cell *matCellDef="let assetAdvisor">  
             At price
             <div>{{assetAdvisor.lastAdviceAssetValue | currency}}</div>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef> Action </th>
-          <td mat-cell *matCellDef="let assetAdvisor">
+          <th fxHide.lt-sm mat-header-cell *matHeaderCellDef> Action </th>
+          <td fxHide.lt-sm mat-cell *matCellDef="let assetAdvisor">
             {{getRecomendationFromType(assetAdvisor.lastAdviceMode)}}
           </td>
         </ng-container>
@@ -99,20 +117,24 @@
         <ng-container matColumnDef="position">
           <th mat-header-cell *matHeaderCellDef> Rating </th>
           <td mat-cell *matCellDef="let assetAdvisor">
-              <div [style.background-color]="getAdviceTypeColor(assetAdvisor.lastAdviceType)">{{getRecommendationFromType(assetAdvisor.lastAdviceType)}}</div>
+              <div [style.background-color]="getAdviceTypeColor(assetAdvisor.lastAdviceType)">
+                {{getRecommendationFromType(assetAdvisor.lastAdviceType)}}
+                <span fxHide.gt-sm><br/>At price {{assetAdvisor.lastAdviceAssetValue | currency}}</span>
+              </div>
+              <div fxHide.gt-xs [title]="assetAdvisor.lastAdviceDate | date: 'medium'">{{assetAdvisor.lastAdviceDate | timeAgo}}</div>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef> Date </th>
-          <td mat-cell *matCellDef="let assetAdvisor">
+          <th fxHide.lt-sm mat-header-cell *matHeaderCellDef> Date </th>
+          <td fxHide.lt-sm mat-cell *matCellDef="let assetAdvisor">
             <div [title]="assetAdvisor.lastAdviceDate | date: 'medium'">{{assetAdvisor.lastAdviceDate | timeAgo}}</div>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="followButton">
-          <th mat-header-cell *matHeaderCellDef> </th>
-          <td mat-cell *matCellDef="let assetAdvisor">
+          <th fxHide.lt-sm mat-header-cell *matHeaderCellDef> </th>
+          <td fxHide.lt-sm mat-cell *matCellDef="let assetAdvisor">
             <div class="white-button action-button-sm" [promiseBtn]="promiseExpert" *ngIf="getAdvisor(assetAdvisor.userId).following" (click)="onUnfollowExpertClick($event, getAdvisor(assetAdvisor.userId))">
               Unfollow
             </div>
