--- a/Web/src/app/components/asset/list-assets/list-assets.component.html
+++ b/Web/src/app/components/asset/list-assets/list-assets.component.html
@@ -1,4 +1,4 @@
-<div class="top-assets-container">
+<div class="top-assets-container global-container-min">
     <div class="global-container">
         <div class="section-title">
             Top Assets
